# otterbrix

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_CLEANUP_PLAN.md  JSON.md  ONLY_TABLE.md  PLAN.md  STEPS.md  STRINGS.md  UNION_TYPES_IMPLEMENTATION_REPORT.md  analyze_json_paths.py  build.sh  pg_performance.txt  test_union_simple.json
.claude/: settings.local.json
JSONBench/: BENCHMARK_ISSUE_FOUND.md  COMPARISON_RESULTS.md  README.md  index.html
JSONBench/clickhouse/: benchmark.sh  create_and_load.sh  ddl.sql  main.sh
JSONBench/doris/: ddl.sql  main.sh
JSONBench/elasticsearch/: main.sh
JSONBench/mongodb/: create_and_load.sh  main.sh
JSONBench/otterbrix/: README.md  benchmark.py  benchmark.sh  benchmark_with_verify.py  count.sh  create_and_load.sh  ddl.sql  drop_table.sh  full_load_output.txt  install.sh  load_data.py  load_data.sh  main.sh  queries.sql  run_queries.sh  test_local.sh  total_size.sh  verify_results.sh
JSONBench/postgresql/: test_local.sh
JSONBench/starrocks/: count.sh  create_and_load.sh  ddl.sql  drop_table.sh  install.sh  load_data.sh  main.sh  physical_query_plans.sh  queries.sql  queries_formatted.sql  run_queries.sh  total_size.sh
ai_helper/: CLASS_RELATIONSHIPS.md  QUICK_REFERENCE.md  README.md  STRUCT.md  TABLE_ARCHITECTURE.md
components/: CMakeLists.txt
components/base/: README.md
components/catalog/: README.md  catalog.cpp  catalog.hpp  computed_schema.cpp  computed_schema.hpp  namespace_storage.cpp  namespace_storage.hpp  table_metadata.hpp
components/configuration/: README.md
components/context/: README.md
components/cursor/: README.md
components/document/: README.md  base.hpp  document.cpp  document.hpp  value.cpp
components/document_table/: CMakeLists.txt  document_table_storage.cpp  document_table_storage.hpp  dynamic_schema.cpp  dynamic_schema.hpp  json_path_extractor.cpp  json_path_extractor.hpp
components/document_table/test/: CMakeLists.txt  test_comprehensive.cpp  test_operators.cpp  test_primary_key_scan.cpp  test_union_integration.cpp  test_union_types.cpp
components/document_table/tests/: test_union_types.cpp
components/expressions/: CMakeLists.txt  README.md  aggregate_expression.cpp  aggregate_expression.hpp  compare_expression.cpp  compare_expression.hpp  expression.cpp  expression.hpp  forward.hpp  function_expression.cpp  function_expression.hpp  key.hpp  scalar_expression.cpp  scalar_expression.hpp  sort_expression.cpp  sort_expression.hpp  update_expression.cpp  update_expression.hpp
components/index/: README.md
components/log/: README.md
components/logical_plan/: CMakeLists.txt  README.md  forward.hpp  node.cpp  node.hpp  node_aggregate.cpp  node_aggregate.hpp  node_create_collection.cpp  node_create_collection.hpp  node_create_database.cpp  node_create_database.hpp  node_create_index.cpp  node_create_index.hpp  node_create_type.cpp  node_create_type.hpp  node_data.cpp  node_data.hpp  node_delete.cpp  node_delete.hpp  node_drop_collection.cpp  node_drop_collection.hpp  node_drop_database.cpp  node_drop_database.hpp  node_drop_index.cpp  node_drop_index.hpp  (+20 more)
core/: enum_cast.hpp  pmr.hpp
docs/: ARCHITECTURE.md  COMPONENTS.md  FILES_REFERENCE.md  GETTING_STARTED.md  README.md  README_STRINGS.md  STRINGS_INDEX.md  STRINGS_SUMMARY.txt  STRING_EXAMPLES.md
for_ai/: README.md  document_table_integration_plan.md  document_table_key_points.md  storage_architecture.md  table_storage.md
log/: python-1771623302.txt  python-1771623305.txt  python-1771623405.txt
tmp_tests/: CMakeLists.txt  test_insert_large.cpp  test_jsonbench.cpp  test_jsonbench_old.txt
(+269 files in other folders)
